# OpenCut

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT.md  AUDIT_PROMPT.md  AUTONOMOUS-LOOP-STATE.md  BUILD.bat  BUILDPLAN.md  CHANGELOG.md  CLAUDE.md  COMPLETED.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Install.bat  Install.ps1  InstallerBuilder.ps1  LOGO_PROMPTS.md  MODERNIZATION.md  OpenCut-Launcher.vbs  OpenCut-Server.bat  OpenCut-Server.command  OpenCut-Server.sh  OpenCut-Server.vbs  OpenCut.iss  PROJECT_CONTEXT.md  README.md  RESEARCH.md  RESEARCH_FEATURE_PLAN_2026-05-25.md  RESEARCH_FEATURE_PLAN_2026-06-06.md  RESEARCH_REPORT.md  ROADMAP-COMPLETED.md  ROADMAP-NEXT.md  ROADMAP.md  SECURITY.md  Start-OpenCut-Hidden.vbs  Start-OpenCut.bat  (+16 more)
.github/: copilot-instructions.md  issue-seeds.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  good_first_issue.yml
.github/workflows/: adobe-premierepro-versions.yml  build.yml  pr-fast.yml
docs/: .gitkeep  AUDIO_DESCRIPTIONS.md  CAPTION_LINE_BREAKING.md  DELIVERY_STANDARDS.md  DELIVERY_TRANSFERS.md  INSTALLER_POLICY.md  LINUX_DISTRIBUTION.md  MACOS_NOTARIZATION.md  MCP_SERVER.md  MODELS.md  NODE_ADVISORIES.md  PHOTOSENSITIVE_FLASH_CHECK.md  PLUGIN_AUTHORING.md  PYTHON_ADVISORIES.md  RELEASE_PROVENANCE.md  RESEARCH.md  RESEARCH_COMPETITIVE_TEARDOWN_2026-06-10.md  REVIEW_BUNDLES.md  REVIEW_NOTIFICATIONS.md  REVIEW_PORTAL.md  ROADMAP-COMPLETED.md  ROADMAP.md  SKILL_AUTHORING.md  TELEMETRY.md  UXP_HYBRID_PACKAGE.md  UXP_MACOS_HTTP.md  UXP_MIGRATION.md  WINDOWS_ARM64_PACKAGING.md  WINDOWS_CODESIGNING.md
extension/: PANEL_PARITY.json
extension/com.opencut.panel/: .debug  .eslintrc.json  eslint.config.mjs  package-lock.json  package.json  playwright.config.mjs  tsconfig.json  vite.config.js  vite.config.mjs  vitest.config.mjs
extension/com.opencut.uxp/: backend-client.js  command-center-layout.css  command-center-tokens.css  command-center.css  csinterface-shim.js  eslint.config.mjs  index.html  job-controller.js  main.js  manifest.json  style.css  udt-smoke.js  uxp-api-notes.md  uxp-bootstrap.js  uxp-components.js  uxp-i18n.js  uxp-migration-dashboard.json  uxp-state.js  uxp-theme.js  uxp-timeline.js  uxp-udt-harness.json  uxp-utils.js
img/: ico.psd  logo.psd
installer/: Export-OpenCutUserData.ps1  InstallerBuilder.ps1
opencut/: __init__.py  __main__.py  auth.py  catalog_contract.py  checks.py  cli.py  config.py  credential_store.py  dependency_support.py  errors.py  gpu.py  helpers.py  job_store.py  jobs.py  journal.py  local_db_diagnostics.py  local_db_maintenance.py  local_db_migrations.py  local_db_payloads.py  mcp_extended_tools.py  mcp_server.py  model_cards.py  network_policy.py  openapi.py  openapi_registry.py  pid.py  polish_state.py  preflight.py  project_facts.py  queue_store.py  registry.py  schemas.py  security.py  security_audit.py  server.py  user_data.py  workers.py
opencut/_generated/: __init__.py  adobe_premierepro_versions.json  api_aliases.json  cep_uxp_parity.json  feature_readiness.json  mcp_extended_tools.json  mcp_server_registry.json  model_cards.json  project_facts.json  route_manifest.json  uxp_udt_harness.json
opencut/core/: __init__.py  ab_av1.py  ab_compare.py  ab_variant.py  accessibility.py  aces_pipeline.py  adjustment_layers.py  adr_cue_system.py  adr_cueing.py  advanced_stabilize.py  ae_extension.py  aerial_hyperlapse.py  agent_chat.py  agent_skills.py  ai_color_intent.py  ai_dubbing.py  ai_eval_harness.py  ai_intro_gen.py  ai_metadata.py  ai_reframe_multi.py  ai_sfx.py  ai_storyboard.py  ambient_generator.py  amd_gpu.py  analytics.py  analyze_vl_qwen.py  animated_captions.py  annotations.py  apple_silicon.py  approval_workflow.py  archival_conform.py  archive_safety.py  asr_canary.py  asr_moonshine.py  asr_nemo.py  asr_nemo_models.py  asr_parakeet.py  asr_provenance.py  asr_router.py  assistant.py  (+587 more)
opencut/data/: animation_presets.json  project_templates.json  social_presets.json  workflow_presets.json
opencut/export/: __init__.py  fcp_transitions.py  otio_compat.py  otio_diff.py  otio_export.py  premiere.py  srt.py
opencut/routes/: __init__.py  advanced_video_generation_routes.py  agent_chat_routes.py  ai_content_routes.py  ai_editing_routes.py  ai_intelligence_routes.py  analysis_routes.py  architecture_routes.py  audio.py  audio_advanced_routes.py  audio_expansion_routes.py  audio_post_routes.py  captions.py  (+117 more)
release_licenses/: apache-2.0.txt  flask-cors-6.0.5.txt
scripts/: bootstrap_check.py  build_linux_packages.sh  build_wpf_installer_ci.ps1  check_dependency_matrix.py  check_doc_sizes.py  docker-entrypoint.sh  fix_es_diacritics.py  i18n_lint.py  lint_locales.py  lint_subprocess_timeouts.py  notarize_macos.sh  prepare_windows_release_metadata.ps1  release_composition.py  release_smoke.py  sbom.py  seed_github_issues.py  sign_windows_artifacts.ps1  smoke_inno_installer.ps1  smoke_wpf_installer.ps1  sync_badges.py  sync_version.py  test_breadth_gate.py  test_wpf_installer.ps1  verify_ffmpeg_provenance.py
tests/: __init__.py  conftest.py  jsx_mock.js  test_adobe_premierepro_versions.py  test_adobe_premierepro_versions_workflow.py  test_agent_chat.py  test_agent_skills.py  test_ai_content.py  test_ai_editing.py  test_ai_eval_harness.py  test_ai_intelligence.py  test_analysis.py  test_api_aliases.py  test_architecture.py  test_archive_safety.py  test_asr_provenance_contract.py  test_asr_router.py  test_async_job_rate_limit.py  test_audio_advanced.py  test_audio_expansion.py  test_audio_post.py  test_audio_production.py  test_audioop_shim.py  test_auto_editor_v30.py  test_auto_update_security.py  test_batch_data.py  test_batch_executor.py  test_batch_parallel.py  test_body_transfer.py  test_boolean_coercion.py  test_bootstrap_check.py  test_breadth_gate.py  test_c2pa_embed.py  test_c2pa_sidecar.py  test_capability_profile.py  test_caption_display_settings.py  test_caption_export_preflight.py  test_caption_interchange.py  test_caption_language_confidence.py  test_caption_line_breaks.py  (+265 more)
(+206 files in other folders)
