[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opencut"
version = "1.0.0b1"
description = "Open-source AI video editing automation for Adobe Premiere Pro - captions, audio processing, visual effects, and more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "OpenCut Contributors"},
]
keywords = [
    "video-editing", "premiere-pro", "silence-removal", "captions", "whisper",
    "ffmpeg", "podcast", "ai-video", "audio-processing", "visual-effects",
    "chromakey", "upscaling", "face-enhancement", "music-generation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "flask>=3.0",
    "flask-cors>=4.0",
]

[project.optional-dependencies]
standard = [
    "faster-whisper>=1.0",
    "opencv-python-headless>=4.8",
    "Pillow>=10.0",
    "numpy>=1.24",
    "librosa>=0.10",
    "pydub>=0.25",
    "noisereduce>=3.0",
    "deep-translator>=1.11",
    "scenedetect[opencv]>=0.6",
]
captions = [
    "faster-whisper>=1.0",
    "Pillow>=10.0",
]
captions-whisperx = [
    "whisperx>=3.0",
]
audio = [
    "demucs>=4.0",
    "pedalboard>=0.9",
    "librosa>=0.10",
    "pydub>=0.25",
    "noisereduce>=3.0",
    "edge-tts>=6.1",
]
video = [
    "opencv-python-headless>=4.8",
    "Pillow>=10.0",
    "numpy>=1.24",
    "scenedetect[opencv]>=0.6",
]
ai = [
    "realesrgan>=0.3",
    "rembg>=2.0",
    "gfpgan>=1.3",
    "insightface>=0.7",
    "onnxruntime-gpu>=1.16",
]
music = [
    "audiocraft>=1.0",
]
diarize = [
    "pyannote.audio>=3.1",
]
all = [
    "faster-whisper>=1.0",
    "whisperx>=3.0",
    "opencv-python-headless>=4.8",
    "Pillow>=10.0",
    "numpy>=1.24",
    "librosa>=0.10",
    "pydub>=0.25",
    "noisereduce>=3.0",
    "deep-translator>=1.11",
    "scenedetect[opencv]>=0.6",
    "demucs>=4.0",
    "pedalboard>=0.9",
    "edge-tts>=6.1",
    "realesrgan>=0.3",
    "rembg>=2.0",
    "gfpgan>=1.3",
    "insightface>=0.7",
    "onnxruntime-gpu>=1.16",
    "audiocraft>=1.0",
    "pyannote.audio>=3.1",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[project.scripts]
opencut = "opencut.cli:main"
opencut-server = "opencut.server:main"

[project.urls]
Homepage = "https://github.com/opencut/opencut"
Repository = "https://github.com/opencut/opencut"
Issues = "https://github.com/opencut/opencut/issues"
Documentation = "https://github.com/opencut/opencut/wiki"

[tool.setuptools.packages.find]
include = ["opencut*"]

[tool.ruff]
line-length = 120
target-version = "py39"
