[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opencut"
version = "1.10.5"
description = "Open-source AI video editing automation for Adobe Premiere Pro - captions, audio processing, visual effects, and more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "OpenCut Contributors"},
]
keywords = [
    "video-editing", "premiere-pro", "silence-removal", "captions", "whisper",
    "ffmpeg", "podcast", "ai-video", "audio-processing", "visual-effects",
    "chromakey", "upscaling", "face-enhancement", "music-generation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

dependencies = [
    "click>=8.0,<9",
    "rich>=13.0,<14",
    "flask>=3.0,<4",
    "flask-cors>=4.0,<5",
    "python-json-logger>=2.0,<3",
    "psutil>=5.9",
]

[project.optional-dependencies]
standard = [
    "faster-whisper>=1.1,<2",
    "opencv-python-headless>=4.8,<5",
    "Pillow>=10.0,<11",
    "numpy>=1.24",
    "librosa>=0.10,<1",
    "pydub>=0.25,<1",
    "noisereduce>=3.0,<4",
    "deep-translator>=1.11,<2",
    "scenedetect[opencv]>=0.6,<1",
]
captions = [
    "faster-whisper>=1.1,<2",
    "Pillow>=10.0,<11",
]
captions-whisperx = [
    "whisperx>=3.0,<4",
]
audio = [
    "demucs>=4.0,<5",
    "pedalboard>=0.9,<1",
    "librosa>=0.10,<1",
    "pydub>=0.25,<1",
    "noisereduce>=3.0,<4",
    "edge-tts>=6.1,<7",
]
video = [
    "opencv-python-headless>=4.8,<5",
    "Pillow>=10.0,<11",
    "numpy>=1.24",
    "scenedetect[opencv]>=0.6,<1",
]
ai = [
    "realesrgan>=0.3,<1",
    "rembg>=2.0,<3",
    "gfpgan>=1.3,<2",
    "insightface>=0.7,<1",
    "onnxruntime>=1.16,<2",
]
ai-gpu = [
    "realesrgan>=0.3,<1",
    "rembg>=2.0,<3",
    "gfpgan>=1.3,<2",
    "insightface>=0.7,<1",
    "onnxruntime-gpu>=1.16,<2",
]
music = [
    "audiocraft>=1.0,<2",
]
diarize = [
    "pyannote.audio>=3.1,<4",
]
auto-edit = [
    "auto-editor>=24.0,<25",
]
scene-ml = [
    "transnetv2>=1.0,<2",
]
enhance = [
    "resemble-enhance>=0.0.1,<1",
]
otio = [
    "opentimelineio>=0.15,<1",
]
tts = [
    "edge-tts>=6.1,<7",
    "kokoro>=0.3",
]
depth = [
    "torch>=2.0",
    "torchvision>=0.15",
    "transformers>=4.30",
]
all = [
    "faster-whisper>=1.1,<2",
    "whisperx>=3.0,<4",
    "opencv-python-headless>=4.8,<5",
    "Pillow>=10.0,<11",
    "numpy>=1.24",
    "librosa>=0.10,<1",
    "pydub>=0.25,<1",
    "noisereduce>=3.0,<4",
    "deep-translator>=1.11,<2",
    "scenedetect[opencv]>=0.6,<1",
    "demucs>=4.0,<5",
    "pedalboard>=0.9,<1",
    "edge-tts>=6.1,<7",
    "realesrgan>=0.3,<1",
    "rembg>=2.0,<3",
    "gfpgan>=1.3,<2",
    "insightface>=0.7,<1",
    "onnxruntime>=1.16,<2",
    "audiocraft>=1.0,<2",
    "pyannote.audio>=3.1,<4",
    "auto-editor>=24.0,<25",
    "transnetv2>=1.0,<2",
    "resemble-enhance>=0.0.1,<1",
    "opentimelineio>=0.15,<1",
]
dev = [
    "pytest>=7.0,<9",
    "pytest-cov>=4.0,<6",
    "ruff>=0.1,<1",
    "pre-commit>=3.0,<4",
]

[project.scripts]
opencut = "opencut.cli:main"
opencut-server = "opencut.server:main"

[project.urls]
Homepage = "https://github.com/SysAdminDoc/OpenCut"
Repository = "https://github.com/SysAdminDoc/OpenCut"
Issues = "https://github.com/SysAdminDoc/OpenCut/issues"
Documentation = "https://github.com/SysAdminDoc/OpenCut/wiki"

[tool.setuptools.packages.find]
include = ["opencut*"]

[tool.pytest.ini_options]
markers = [
    "integration: requires real FFmpeg processing",
    "slow: tests that take >30 seconds",
]

[tool.ruff]
line-length = 120
target-version = "py39"
